--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,16 @@
     "@types/node": "^16.11.62",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/redux": "^3.6.31",
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.1",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.2.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +48,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-scroll": "^1.8.4"
+    "@types/react-redux": "^7.1.24",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-router-redux": "^5.0.21",
+    "@types/react-scroll": "^1.8.4",
+    "@types/redux-actions": "^2.6.2"
   }
 }
